[gd_scene load_steps=6 format=3 uid="uid://b8k5mm4vojktp"]

[ext_resource type="FontFile" uid="uid://2lp6xig6fljk" path="res://fonts/windows_command_prompt.ttf" id="1_irgsh"]
[ext_resource type="Texture2D" uid="uid://b8uv67y80q6kv" path="res://sprites/spr_buttons/+bullet_time.png" id="1_q4e2c"]
[ext_resource type="Script" path="res://scripts/scr_buttons/+bullet_time.gd" id="1_stca5"]
[ext_resource type="AudioStream" uid="uid://vwbatgl43v2y" path="res://sounds/Blip_Select4.wav" id="3_w8u7v"]
[ext_resource type="AudioStream" uid="uid://ytua1fua0xg3" path="res://sounds/Powerup4.wav" id="4_0ybyl"]

[node name="+bullet_time" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
mouse_filter = 1
icon = ExtResource("1_q4e2c")
flat = true
script = ExtResource("1_stca5")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 17.0
offset_top = 170.0
offset_right = 218.0
offset_bottom = 267.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("1_irgsh")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[shake]                +
TEMPO DE DURAÇÃO 
         DA  BALA"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_w8u7v")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0ybyl")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D2" to="." method="_on_audio_stream_player_2d_2_finished"]
